xxxx-xx-xx: 3.4.3

	Bugfixes:

	php7: fix `@:enum abstract` generation  without `-dce full` (#6175)
	php7: fix using enum constructor with arguments as a call argument (#6177)
	php/php7: fixed accessing enum constructors on enum type stored to a variable (#6159)
	php: fix invoking functions stored in dynamic static vars (#6158)
	macro : fixed bug in addClassPath that overwrites macro class paths with context class paths

2017-03-20: 3.4.2

	Bugfixes:

	cpp : fixed issue with @:native names being prefixed with :: (#6086)
	cpp : fixed issue with return type handling (#6103)
	cpp : fixed inaccurate line numbers that threw off debugging
	php7 : fixed generation of `[][0]` constructs (#6090)

2017-03-17: 3.4.1

	New features:

	php7 : added source maps generation with `-D source_map` flag.

	General improvements and optimizations:

	cpp : added cpp.Star and cpp.Struct to help with extern typing
	lua : cleaned up various parts of the standard library

	Bugfixes:

	all : fixed compilation server issue with two identical @:native paths on extern abstracts (#5993)
	all : fixed invalid inling in a specific case (#6067)
	all : fixed various display related issues
	all : fixed inline super() calls missing field initializations (#6097)
	all : consider UNC paths to be absolute in haxe.io.Path.isAbsolute (#6061)
	cpp : improved typing of some Function/Callable-related types
	cpp : fixed problem with line numbers when debugging
	hl : various fixes and improvements
	php : fixed FileSystem.stat() for directories on Windows (#6057)
	php/php7 : fixed invalid result of Web.getPostData() (#6033)
	php7 : fixed invalid access to length of string in some cases (#6055)
	php7 : fixed infinite recursion on MysqlConnection.close() (#6056)

2017-01-31: 3.4.0

	General improvements and optimizations:

	all : support completion for static extensions (#5766)
	all : removed neko dependency for macros, use PCRE instead